WRP-2252 Validation in "view all projects" had the wrong color for the icon. validation icon was a different color in projects then on dashboard. Corrected this.

--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -602,7 +602,15 @@ select.primitive {
 .paging .btn {
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3) !important;
 }
-
+.badge {
+    display: inline-block;
+    min-width: 10px;
+    color: #FFF;
+    vertical-align: baseline;
+    white-space: nowrap;
+    text-align: center;
+    border-radius: 10px;
+}
 .badge {
   
   font-weight: normal;
